@@ -14,18 +14,14 @@
 ~~ See the License for the specific language governing permissions and
 ~~ limitations under the License.
 
-            ------
-            Tajo - Build Instruction
-            ------
-            Hyunsik Choi
-            ------
-             2013-02-24
+            -----------------
+            Build Instruction
 
 Build Requirements
 
   * Unix System
 
-  * Java 1.6 or higher
+  * Java 1.6
 
   * Protocol Buffers 2.4.1 
 
@@ -51,10 +47,10 @@ Maven main modules
 
 Building Tajo from Source
 
-  Download the source code from the git repository (https://github.com/tajo-project/tajo) as follows:
+  Download the source code from the git repository ({{http://git-wip-us.apache.org/repos/asf/incubator-tajo.git}}) as follows:
 
 ------------------------------------------------
-$ git clone https://github.com/tajo-project/tajo
+$ git clone http://git-wip-us.apache.org/repos/asf/incubator-tajo.git
 ------------------------------------------------
 
   Then, you can execute maven with the following goals:
