@@ -14,12 +14,8 @@
 ~~ See the License for the specific language governing permissions and
 ~~ limitations under the License.
 
-            ------
-            Tajo - Configuration Guide
-            ------
-            Hyunsik Choi
-            ------
-             2013-02-24
+            ---------------
+            Configuration
 
 Preliminary
 
